objects/PurchaseOrderLineItem__c/PurchaseOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line</label>
    <nameField>
        <label>Purchase Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>