objects/PurchaseOrderLineItem__c/validationRules/PO_Items_For_Completed_Orders.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Items_For_Completed_Orders</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Purchase_Order__r.Status__c, &quot;Completed&quot;)</errorConditionFormula>
    <errorMessage>Cannot change purchase order items for completed orders.</errorMessage>
</ValidationRule>