objects/PurchaseOrderLineItem__c/validationRules/Validate_Unit_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Unit_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price cannot be less than or equal 0.</errorMessage>
</ValidationRule>