objects/PurchaseOrderLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>